<resources>
    <string name="app_name">Pillaroid</string>

    <string name="page_mypage">My Page</string>
    <string name="page_notice">Notice</string>
    <string name="page_search_camera">Inquiry by Medicine Shooting</string>
    <string name="page_search_case">Inquiry by Container</string>
    <string name="page_search_pill">Inquiry by Pill</string>
    <string name="page_search_voice">Inquiry by Speech Recognition</string>
    <string name="page_search_document">Inquiry by Document</string>
    <string name="page_search_prescription">Inquiry by Prescription</string>
    <string name="page_search_pharmacy_envelope">Inquiry by Drug Envelope</string>
    <string name="page_medicine_favorites">Medicine Favorite</string>
    <string name="page_medicine_notice">Notification of Dosing</string>

    <string name="category_efficacy">Efficacy</string>
    <string name="category_dosage">Usage and Dosage</string>
    <string name="category_precaution">Precaution</string>
    <string name="category_appearance">Appearance</string>
    <string name="category_ingredient">Ingredient</string>
    <string name="category_save">Storage Method</string>

    <string name="appearance_feature">- Feature:</string>
    <string name="appearance_formulation">- Formulation:</string>
    <string name="appearance_shape">- Shape:</string>
    <string name="appearance_color">- Color:</string>
    <string name="appearance_dividing_line">- Dividing Line:</string>
    <string name="appearance_identification_mark">- Identification Mark:</string>

    <string name="logo">Pillaroid logo</string>
    <string name="title">Title</string>
    <string name="icon">Icon</string>

    <string name="icon_information">Information Icon</string>
    <string name="icon_camera">Camera Icon</string>
    <string name="icon_pill">Pill Icon</string>
    <string name="icon_voice">Voice Icon</string>
    <string name="icon_document">Document Icon</string>
    <string name="icon_prescription">Prescription Icon</string>
    <string name="icon_pharmacy">Pharmacy Icon</string>
    <string name="icon_mypage">Mypage Icon</string>
    <string name="icon_notice">Nofication Icon</string>
    <string name="icon_favorites">Favorites Icon</string>
    <string name="icon_search">Search Icon</string>
    <string name="icon_kakao">Kakao Icon</string>

    <string name="icon_logout">Sign out Icon</string>
    <string name="icon_dot">Bullet Point Icon</string>
    <string name="icon_sound_minus">Volume Down Icon</string>
    <string name="icon_sound_plus">Volume Up Icon</string>
    <string name="icon_next_page">Next Page Icon</string>

    <string name="text_pillaroid">Pillaroid</string>
    <string name="text_logout">Sign out</string>
    <string name="text_save">Save</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_time_setting">Set meal times</string>
    <string name="text_favorites_list">List of favorites</string>
    <string name="text_medicine_name">Medicine name</string>
    <string name="text_undefined_num">-</string>
    <string name="text_slash">/</string>
    <string name="text_one">1.</string>
    <string name="text_two">2.</string>
    <string name="text_three">3.</string>

    <string name="text_intro_jump">Skip</string>
    <string name="text_intro_introduction">Pillaroid is a service that allows you to search for medicines and prescriptions.\n\nThe first way to search for a medicine is to take a picture of the medicine, or say the name of the medicine by voice.\n\nFor information on how to search for medicines in a prescription, please take a picture of the prescription.\n\nNow let\'s use the app?</string>

    <string name="text_login_kakao">Kakao Login</string>

    <string name="text_search_voice_guide1">Press the volume up button and say the name of the medicine you want to search for.</string>
    <string name="text_search_voice_guide2">When recording starts, a ding-dong sound is heard.</string>
    <string name="text_search_voice_guide3">When you\'re done speaking, press the volume up button again.</string>
    <string name="text_search_voice_guide4">Re-recording is done in the same way.</string>
    <string name="text_search_voice_result">Search Result:</string>
    <string name="text_search_voice_show">Next</string>

    <string name="text_medicine_result_no_appearance">There is no appearance information.</string>
    <string name="text_voice_result_introduction">When you get the desired result, press the volume up button.</string>

    <string name="text_prescription_title">Search Results:&#160;&#160;Total&#160;</string>

    <string name="text_mypage_guide_sound">Guide Volume Control</string>
    <string name="text_mypage_guide_sound_default">8</string>
    <string name="text_mypage_guide_speed">Guide Speed Control</string>

    <string name="text_favorites_search">Looking up your favorites list.</string>
    <string name="text_favorites_no_result">There are no medicines set as favorites.</string>

    <string name="text_alarm_search">Looking up notification list.</string>
    <string name="text_alarm_no_result">There are no medicines set as notifications.</string>

    <string name="text_time_setting_introduction">* Medicine notifications are sent at the set time.</string>
    <string name="text_time_setting_hour">Hour</string>
    <string name="text_time_setting_minute">Minute</string>
    <string name="text_time_setting_morning">AM</string>
    <string name="text_time_setting_afternoon">PM</string>
    <string name="text_time_setting_time_morning">Breakfast</string>
    <string name="text_time_setting_time_lunch">Lunch</string>
    <string name="text_time_setting_time_dinner">Dinner</string>

    <string name="text_time_setting_00">00</string>
    <string name="text_time_setting_hour_last">23</string>
    <string name="text_time_setting_minute_last">50</string>

    <string name="text_alarm_period">the duration of a dose</string>
    <string name="text_add_alarm_title">Generate a Notification</string>
    <string name="text_add_alarm_label">Label:</string>
    <string name="text_add_alarm_period">Taking Period:</string>
    <string name="text_add_alarm_day">day</string>
</resources>