<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ImageView
        android:id="@+id/iv_ab_mypage_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/icon"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="15dp"
        android:layout_toStartOf="@id/ll_ab_mypage_logout"
        android:layout_toEndOf="@id/iv_ab_mypage_icon"
        android:text="@string/page_mypage"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_ab_mypage_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="3dp"
            android:contentDescription="@string/icon_logout"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_logout"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
