<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <ImageView
        android:id="@+id/iv_ab_favorites_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/icon_favorites"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_star_off" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="15dp"
        android:layout_toStartOf="@id/iv_ab_favorites_search"
        android:layout_toEndOf="@id/iv_ab_favorites_icon"
        android:text="@string/text_favorites_list"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_ab_favorites_search"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/icon_search"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_search" />
</RelativeLayout>
