<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/iv_ab_alarm_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/icon_notice"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_bell_off" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="15dp"
        android:layout_toStartOf="@id/bt_ab_alarm_time_setting"
        android:layout_toEndOf="@id/iv_ab_alarm_icon"
        android:text="@string/page_notice"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_ab_alarm_time_setting"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_general_button"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="10dp"
        android:text="@string/text_time_setting"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
