<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_intro_next"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/bg_r7white_shadow"
        android:backgroundTint="@color/main_color"
        android:text="@string/text_intro_jump"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/ll_intro_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/bt_intro_next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_text_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_intro_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_intro_introduction"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ll_intro_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>
