<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_voiceresults_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_voiceresults_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/text_voice_result_introduction"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tb_voiceresults_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/tv_voiceresults_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="25dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_voiceresults_rule"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.8"/>

    <LinearLayout
        android:id="@+id/ll_voiceresults_idx"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/tv_voiceresults_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.85">

        <LinearLayout
            android:id="@+id/ll_voiceresults_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingStart="15dp">
            <TextView
                android:id="@+id/tv_voiceresults_idx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:text="@string/text_undefined_num"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:focusable="false"
                android:clickable="false"
                android:text="@string/text_slash"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_voiceresults_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:clickable="false"
                android:text="@string/text_undefined_num"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:focusable="false"
                android:clickable="false"
                android:text="@string/text_voice_result_unit"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_voiceresults_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/ll_voiceresults_idx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.85"/>
</androidx.constraintlayout.widget.ConstraintLayout>
